--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "bootstrap": "4.1.1",
     "font-awesome": "4.7.0",
     "joi-browser": "^13.4.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
+    "raven-js": "^3.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "4.3.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
